Settings: Force show navbar while hw keys are enabled (2/2)
Change-Id: Ic6e021fff7b394e1d20c08c4653528103ea1df19

--- a/res/xml/navbar_settings.xml
+++ b/res/xml/navbar_settings.xml
@@ -22,6 +22,10 @@
         android:key="navbar_visibility"
         android:title="@string/navbar_visibility" />
 
+    <SwitchPreference
+        android:key="force_navbar_with_hw_keys"
+        android:title="@string/force_navbar_with_hw_keys_title" />
+
     <PreferenceCategory
         android:key="category_navbar_interface"
         android:title="@string/navbar_interface_title" >
