--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -101,6 +101,7 @@
     <string name="default_string">Default</string>
     <string name="reset">Reset</string>
     <string name="summary_navbar">Smartbar/Fling and the Pulse visualizer</string>
+    <string name="force_navbar_with_hw_keys_title">Force navbar with hw buttons</string>
 
     <!-- Actions dialog and default task values set in ActionPreference xml-->
     <string name="choose_action_title">Choose action</string>
