DUI Smartbar: double tap to sleep on navbar [3/3]
this is more reliable than double tap to sleep action on
navbar buttons

Change-Id: I8279f94fb6a13e2fbd74fa121e95d6fd7872e2e5

--- a/res/xml/smartbar_settings.xml
+++ b/res/xml/smartbar_settings.xml
@@ -44,6 +44,12 @@
         android:entryValues="@array/smartbar_button_animation_values"
         android:summary="@string/smartbar_button_animation_summary" />
 
+    <com.android.settings.preference.SystemSettingSwitchPreference
+        android:key="smartbar_doubletap_sleep"
+        android:title="@string/smartbar_doubletap_sleep_title"
+        android:summary="@string/smartbar_doubletap_sleep_summary"
+        android:defaultValue="false" />
+
     <com.android.settings.aicp.preference.CustomSeekBarPreference
         android:key="navbar_buttons_alpha"
         android:title="@string/navbar_buttons_alpha_title"
@@ -51,6 +57,4 @@
         settings:min="0"
         settings:units=""
         android:persistent="false" />
-
-
 </PreferenceScreen>
