--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -238,6 +238,8 @@
     <string name="smartbar_config_backup_error_toast">Error saving Smartbar profile</string>
     <string name="smartbar_config_restore_error_toast">Error restoring Smartbar profile</string>
     <string name="navbar_buttons_alpha_title">Button transparency</string>
+    <string name="smartbar_doubletap_sleep_title">Double tap to sleep</string>
+    <string name="smartbar_doubletap_sleep_summary">Double tap on navbar empty areas to switch off the screen</string>
 
     <string name="link_volume_option_title">Link ringtone &amp; notification volumes</string>
 
