Settings: Forward port long-press-back to kill app (1/2)
AICPfy:
- Add back missing parts

PS2: Add spanish translations
PS3: Set original author

Change-Id: Id279ae2676cfffde6ffa4e7f713330f35e2cd166

--- a/res/values-es/aicp_strings.xml
+++ b/res/values-es/aicp_strings.xml
@@ -295,4 +295,8 @@
    <string name="selinux_enforcing_title">Obligatorio</string>
    <string name="selinux_permissive_toast_title">¡Selinux establecido a Permisivo!</string>
 
+   <!-- Kill app long-press back -->
+   <string name="kill_app_longpress_back">Botón atrás cierra aplicación</string>
+   <string name="kill_app_longpress_back_summary">Pulsación larga sobre el botón atrás cierra la aplicación en primer plano</string>
+
 </resources>
