--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -316,6 +316,9 @@
     <!-- title for lock screen weather preference -->
     <string name="lockscreen_weather_enabled_title">Show weather</string>
 
+    <!-- title for lock screen blur preference -->
+    <string name="lockscreen_blur_enabled_title">Blur background</string>
+
     <!-- Proximity wake -->
     <string name="proximity_wake_title">Prevent accidental wake-up</string>
     <string name="proximity_wake_summary">Check the proximity sensor prior to wake-ups triggered by gestures</string>
