--- a/res/values-es/aicp_strings.xml
+++ b/res/values-es/aicp_strings.xml
@@ -325,4 +325,44 @@
     <string name="dashboard_summary_double_lines_summary_on">Muestra el resumen en más líneas en la pantalla de ajustes</string>
     <string name="dashboard_summary_double_lines_summary_off">Muestra el resumen en una sola línea en la pantalla de ajustes</string>
 
+    <!-- Doze pulse options -->
+    <string name="doze_settings">Ajustes doze</string>
+    <string name="summary_doze_enabled">Habilitado</string>
+    <string name="summary_doze_disabled">Deshabilitado</string>
+    <string name="doze_overwrite_value_title">Modificar ajustes predeterminados</string>
+    <string name="doze_overwrite_value_summary">Permite sobreescribir los valores por defecto con los valores del usuarioº</string>
+    <string name="doze_pulse_title">Ajustes de configuración de usuario</string>
+    <string name="doze_pulse_duration_in_title">Desvanecer hacia dentro</string>
+    <string name="doze_pulse_duration_in_summary"></string>
+    <string name="doze_pulse_duration_visible_title">Tiempo de visualización</string>
+    <string name="doze_pulse_duration_visible_summary"></string>
+    <string name="doze_pulse_duration_out_title">Desvanecerse hacia afuera</string>
+    <string name="doze_pulse_duration_out_summary"></string>
+    <string name="doze_trigger_pickup_title">Despertar al coger el teléfono</string>
+    <string name="doze_trigger_pickup_summary_on">La pantalla se encenderá al coger el dispositivo</string>
+    <string name="doze_trigger_pickup_summary_off">La pantalla no se encenderá al coger el dispositivo</string>
+    <string name="doze_trigger_notification_title">Notification trigger</string>
+    <string name="doze_trigger_notification_summary_on">La pantalla se encenderá al recibir notificaciones</string>
+    <string name="doze_trigger_notification_summary_off">La pantalla no se encenderá al recibir notificaciones</string>
+    <string name="doze_brightness_level_title">Nivel de brillo</string>
+    <string name="onehundred_ms">100 ms</string>
+    <string name="twofifty_ms">250 ms</string>
+    <string name="fivehundred_ms_default">500 ms (predeterminado)</string>
+    <string name="sevenfifty_ms">750 ms</string>
+    <string name="one_second">1 s</string>
+    <string name="onehalf_second">1.5 s</string>
+    <string name="two_second">2 s</string>
+    <string name="twohalf_second">2.5 s</string>
+    <string name="three_second_default">3 s (predeterminado)</string>
+    <string name="threehalf_second">3.5 s</string>
+    <string name="four_second">4 s</string>
+    <string name="fourhalf_second">4.5 s</string>
+    <string name="five_second">5 s</string>
+    <string name="doze_notification_color_invert_title">Inversión de notificaciones</string>
+    <string name="doze_notification_color_invert_summary_off">No se invertirán los colores de las notificaciones. Se usa para temas oscuros.</string>
+    <string name="doze_notification_color_invert_summary_on">Se invertirán los colores de la notificaciones. Se usa para temas claros.</string>
+
+    <string name="double_tap_wake_doze_title">Doble toque para despertar en doze</string>
+    <string name="double_tap_wake_doze_summary">Requiere un doble toque para despertar el dispositivo cuando doze mantiene la pantalla encendida</string>
+
 </resources>
