Add Magisk Manager dashboard option
The primary reason for bringing this into the dashboard is that the
Magisk Manager will soon have root management options, meaning that
people will no longer need the Superuser app

I would have liked to use the actual Magisk icon from within the app
but it just does not look good at lower DPIs so I picked a tuning icon
from https://materialdesignicons.com/

Preview with summary: http://i.imgur.com/Zc1FJN8.png

Change-Id: If7df9976d371b29797ec4c237c77c7489f6a3541
Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>

--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -397,4 +397,8 @@
     <string name="night_bright_min">Minimum brightness</string>
     <string name="night_bright_low">Low brightness</string>
     <string name="night_bright_medium">Medium brightness</string>
+
+    <string name="magisk_title">Magisk Manager</string>
+    <string name="magisk_summary">Root management</string>
+
 </resources>
