--- a/res/layout/expanded_item.xml
+++ b/res/layout/expanded_item.xml
@@ -49,7 +49,7 @@
             android:layout_marginTop="2dip"
             android:singleLine="true"
             android:ellipsize="marquee"
-            android:textColor="@android:color/black"
+            android:textColor="?android:attr/colorForeground"
             android:textAppearance="@style/TextAppearance.Medium"
             android:textAlignment="viewStart" />
 
