--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2016 AICP
+     Copyright (C) 2016-2017 AICP
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -223,9 +223,9 @@
     <string name="smartbar_button_animation_summary">Set the animation style of the primary buttons when they are pressed</string>
     <string name="smartbar_button_animation_ripple">Ripple</string>
     <string name="smartbar_button_animation_spring">Spring</string>
-    <string name="smartbar_button_animation_pixel">Pixel (all buttons)</string>
-    <string name="smartbar_button_animation_pixel_home">Pixel (Home button only)</string>
-    <string name="smartbar_button_animation_pixel_home_ripple">Pixel (Home button only) and Ripple</string>
+    <string name="smartbar_button_animation_pixel">Pixel</string>
+    <string name="smartbar_button_animation_pixel_home">Pixel (Home only - spring)</string>
+    <string name="smartbar_button_animation_pixel_home_ripple">Pixel (Home only - ripple)</string>
     <string name="qs_tile_animation_style_flip">Flip</string>
     <string name="smartbar_factory_reset_title">Reset to stock</string>
     <string name="smartbar_factory_reset_confirm">Are you sure you want to reset Smartbar to stock settings?</string>
