--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -413,4 +413,8 @@
     <string name="substratum_title">Substratum</string>
     <string name="substratum_summary">Customize device theme</string>
 
+   <!-- Force authorize substratum packages -->
+   <string name="force_authorize_substratum_packages_title">Allow theme apps from unknown sources</string>
+   <string name="force_authorize_substratum_packages_summary">Force authorize every theme app</string>
+
 </resources>
